--- a/Frontend/CoinWise-AI/package.json
+++ b/Frontend/CoinWise-AI/package.json
@@ -24,7 +24,7 @@
     "expo": "~52.0.40",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
-    "expo-document-picker": "~13.0.3",
+    "expo-document-picker": "^13.0.3",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
@@ -38,7 +38,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-android-sms": "^0.0.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-sms-android": "^2.1.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -54,6 +56,7 @@
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
+    "react-native-android-notification-listener": "^5.0.1",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
