--- a/Backend/Coinwise-AI/package.json
+++ b/Backend/Coinwise-AI/package.json
@@ -12,12 +12,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.1.1",
+    "@langchain/core": "^0.3.43",
+    "@langchain/openai": "^0.5.0",
     "bcryptjs": "^2.4.3",
-    "dotenv": "^16.4.1",
     "cors": "^2.8.5",
-    "jsonwebtoken": "^9.0.2"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
+    "firebase-admin": "^13.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.3.19",
+    "mongoose": "^8.1.1",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
