--- a/AI_Backend/.env
+++ b/AI_Backend/.env
@@ -1,1 +1,3 @@
-GROQ_API_KEY='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'
+GROQ_API_KEY=GROQ_API_KEY=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
+FLASK_ENV=development
+FLASK_APP=app.py
