--- a/Frontend/CoinWise-AI/package.json
+++ b/Frontend/CoinWise-AI/package.json
@@ -15,7 +15,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@expo/vector-icons": "^14.0.2",
+    "@mui/material": "^7.0.0",
     "@react-native-firebase/app": "^21.12.3",
     "@react-native-firebase/auth": "^21.12.3",
     "@react-native-picker/picker": "^2.11.0",
